modify .htaccess file

--- a/.htaccess
+++ b/.htaccess
@@ -6,5 +6,9 @@ RewriteEngine On
 #
 # RewriteBase /
 
+RewriteCond %{REQUEST_URI} !^/public/
+RewriteRule ^(.*)$ public/$1 [L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^ index.php [QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ public/index.php [QSA,L]
