--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,8 @@
   "license": "Apache-2.0",
   "authors": [
     {
-      "name": "moznion",
-      "email": "moznion@gmail.com",
-      "role": "Retired"
-    },
-    {
-      "name": "Satoru Yoshihara",
-      "email": "vaduz0@gmail.com",
-      "role": "Retired"
-    },
-    {
-      "name": "Satoshi Shibuya",
-      "email": "satosby@gmail.com",
-      "role": "Maintainer"
+      "name": "Terry Lin",
+      "email": "terrylin1515@gmail.com"
     }
   ],
   "require": {
