fix: update psr-4 namespace prefix

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "autoload": {
     "psr-4": {
-      "TerryLin\\": "src/"
+      "TerryLin\\LineBot\\": "src/"
     }
   },
   "require-dev": {
