--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "guzzlehttp/guzzle": "^7.5",
     "guzzlehttp/psr7": "^2.5",
     "php-di/slim-bridge": "^3.3",
-    "linecorp/line-bot-sdk": "^9.5",
+    "linecorp/line-bot-sdk": "12.3.0",
     "vlucas/phpdotenv": "^5.6"
   },
   "autoload": {
